style.css: Add a box with a border around it for the license
Signed-off-by: Robin Getz <robin.getz@analog.com>

--- a/board/pluto/msd/img/style.css
+++ b/board/pluto/msd/img/style.css
@@ -118,3 +118,10 @@ a{
 .anchor{
 	float: right;
 }
+.boxed {
+	box-sizing: border-box;
+	padding: 10px;
+	border: 1px solid;
+	border-color: #636363;
+	border-radius: 5px;
+}
